--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.6.0",
     "pinia": "^2.0.13",
+    "prettier-plugin-tailwindcss": "^0.1.10",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
