--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "daniloribeiro",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -9,27 +10,28 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.3",
-    "pinia": "^2.0.23",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "@headlessui/vue": "^1.7.23",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "pinia": "^2.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@types/node": "^16.11.65",
-    "@vitejs/plugin-vue": "^2.3.4",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.25.0",
-    "eslint-plugin-vue": "^8.7.1",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.8",
-    "typescript": "~4.6.4",
-    "vite": "^2.9.15",
-    "vue-tsc": "^0.34.17"
+    "@eslint/js": "^9.17.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.1.4",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.6.2",
+    "vite": "^6.0.1",
+    "vue-tsc": "^2.1.10"
   }
 }
